...
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="eeg-UR-k6F">
                                <rect key="frame" x="93.666666666666671" y="663" width="226.66666666666663" height="31"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y8Q-hU-UXz">
                                        <rect key="frame" x="0.0" y="0.0" width="83.333333333333329" height="31"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" image="arrowshape.turn.up.backward.2" catalog="system" title="Back"/>
                                        <connections>
                                            <action selector="backButton:" destination="GYK-Qx-PgR" eventType="touchUpInside" id="Beq-7r-75d"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ptb-4M-ds6">
                                        <rect key="frame" x="143.33333333333331" y="0.0" width="83.333333333333314" height="31"/>
...
                            <constraint firstItem="xeg-cL-T1g" firstAttribute="centerX" secondItem="ehE-PX-HnE" secondAttribute="centerX" id="KI2-Js-ldE"/>
                            <constraint firstItem="w2G-ZV-DY8" firstAttribute="centerX" secondItem="ehE-PX-HnE" secondAttribute="centerX" id="jjZ-6X-JDV"/>
                            <constraint firstItem="eeg-UR-k6F" firstAttribute="top" secondItem="w2G-ZV-DY8" secondAttribute="bottom" constant="38" id="plw-ig-tYw"/>
                            <constraint firstItem="w2G-ZV-DY8" firstAttribute="top" secondItem="xeg-cL-T1g" secondAttribute="bottom" constant="18.5" id="yCT-s2-d8r"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Study" image="folder.fill.badge.person.crop" catalog="system" id="3EL-ec-fdb"/>
                    <connections>
                        <outlet property="ImageView" destination="xeg-cL-T1g" id="CS2-0A-7e9"/>
                        <outlet property="backButton" destination="Y8Q-hU-UXz" id="NOl-kW-qbg"/>
                        <outlet property="nextButton" destination="ptb-4M-ds6" id="gGt-vd-EuN"/>
                        <outlet property="playButton" destination="w2G-ZV-DY8" id="ALG-nA-Zie"/>
                    </connections>
...
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="DnW-aZ-Wvk" firstAttribute="centerX" secondItem="5N2-jq-97m" secondAttribute="centerX" id="hJ7-4s-Zt5"/>
                            <constraint firstItem="DnW-aZ-Wvk" firstAttribute="centerY" secondItem="5N2-jq-97m" secondAttribute="centerY" id="txN-nc-kmo"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="About" image="pencil.slash" catalog="system" id="LAZ-gU-tVZ"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="DaA-1H-0PK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="279" y="-75"/>
        </scene>
        <!--Success View Controller-->
...
                            <constraint firstItem="9qc-dc-kI5" firstAttribute="centerY" secondItem="ZNk-x5-H04" secondAttribute="centerY" id="WE6-uS-vg2"/>
                            <constraint firstItem="9qc-dc-kI5" firstAttribute="centerX" secondItem="ZNk-x5-H04" secondAttribute="centerX" id="lMj-mp-Ibp"/>
                            <constraint firstItem="S2J-HK-v49" firstAttribute="top" secondItem="Ehc-6H-4qt" secondAttribute="top" constant="139" id="s1b-g7-74m"/>
                            <constraint firstItem="S2J-HK-v49" firstAttribute="centerX" secondItem="ZNk-x5-H04" secondAttribute="centerX" id="vuK-WV-z6U"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" id="xnw-4O-CXx">
                        <color key="badgeColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBarItem>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mcP-AS-eCv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-450" y="-560"/>
...
